--- a/FightAcademy/FightAcademy/ReusableView/CustomRightView.xib
+++ b/FightAcademy/FightAcademy/ReusableView/CustomRightView.xib
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,12 +19,12 @@
                     <rect key="frame" x="0.0" y="0.0" width="50" height="15"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="multiply.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yxP-jz-tyZ">
-                            <rect key="frame" x="0.0" y="2" width="17.5" height="10.5"/>
-                            <color key="tintColor" systemColor="systemGray4Color"/>
-                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
+                            <rect key="frame" x="0.0" y="0.5" width="19.5" height="14"/>
+                            <color key="tintColor" name="clearButtonColor"/>
+                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Khz-8c-1eo">
-                            <rect key="frame" x="21.5" y="1.5" width="28.5" height="11.5"/>
+                            <rect key="frame" x="23.5" y="1.5" width="26.5" height="11.5"/>
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                         </imageView>
@@ -32,7 +32,7 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="z6O-1W-Rg8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="FJT-Fy-lSH"/>
                 <constraint firstItem="z6O-1W-Rg8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GVN-jh-vRY"/>
@@ -50,11 +50,8 @@
     <resources>
         <image name="eye.fill" catalog="system" width="128" height="78"/>
         <image name="multiply.circle.fill" catalog="system" width="128" height="121"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="clearButtonColor">
+            <color red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
